--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
   "prefix": "&",
-  "guild_id": "<id of the server the bot should run>",
-  "token": "<the token of the bot>"
+  "guild_id": "<id of the server the bot should run>"
 }
