--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@nut-tree/nut-js": "^3.1.2",
+    "axios": "^1.5.1",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1"
   },
